chore(ci): Python 코드 변경 감지 패턴 추가
- detect_changes.code 필터에 src/tests Python 패턴과 pyproject.toml, requirements*.txt 추가
- docs/workflow.md 조건별 실행 규칙을 실제 필터 기준과 1:1로 동기화
- src/main.py 변경 시 code_changed=true가 되도록 패턴 매칭 로직 점검

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
               - 'AGENTS.md'
               - 'claude.md'
               - '.github/**'
+              - 'src/**/*.py'
+              - 'tests/**/*.py'
+              - 'pyproject.toml'
+              - 'requirements*.txt'
               - '**/*.js'
               - '**/*.cjs'
               - '**/*.mjs'
