chore(#999): Python lint를 ruff로 CI 표준화
- code_changed 필터에 Python 파일과 pyproject.toml을 추가\n- Code lint check job에 setup-python 및 ruff check 실행 기반을 추가\n- package.json에 lint:py 스크립트 추가 후 lint 통합 실행으로 정리\n- docs/workflow.md의 Code lint check 명령 설명을 실제 실행 커맨드와 동기화

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "description": "문서 우선 운영 저장소의 lint/format/commitlint 실행 환경",
   "scripts": {
-    "lint": "eslint . --ext .js,.cjs --max-warnings=0",
+    "lint": "npm run lint:js && npm run lint:py",
+    "lint:js": "eslint . --ext .js,.cjs --max-warnings=0",
+    "lint:py": "ruff check src tests",
     "format": "prettier --write \"**/*.{js,cjs,json}\"",
     "format:check": "prettier --check \"**/*.{js,cjs,json}\"",
     "commitlint": "commitlint --last",
