--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
               - 'AGENTS.md'
               - 'claude.md'
               - '.github/**'
+              - 'pyproject.toml'
+              - '**/*.py'
               - '**/*.js'
               - '**/*.cjs'
               - '**/*.mjs'
@@ -47,6 +49,14 @@ jobs:
         with:
           node-version: '20'
           cache: npm
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Ruff
+        run: python -m pip install --upgrade pip ruff
 
       - name: Install dependencies
         run: npm ci
