refactor(parser): typescript 모듈 경계 기반 파이프라인 전환 (#26)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ jobs:
               - 'AGENTS.md'
               - 'claude.md'
               - '.github/**'
-              - 'src/**/*.py'
-              - 'tests/**/*.py'
-              - 'pyproject.toml'
-              - 'requirements*.txt'
+              - '**/*.ts'
+              - 'tsconfig.json'
+              - 'package.json'
+              - 'package-lock.json'
               - '**/*.js'
               - '**/*.cjs'
               - '**/*.mjs'
