--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/main.js",
     "start:batch": "node dist/batch_main.js",
-    "lint": "eslint . --ext .js,.cjs,.mjs,.ts,.tsx --max-warnings=0",
+    "lint": "eslint . --ext .js,.cjs,.ts --max-warnings=0",
     "format": "prettier --write \"**/*.{js,cjs,mjs,ts,json}\"",
     "format:check": "prettier --check \"**/*.{js,cjs,mjs,ts,json}\"",
     "commitlint": "commitlint --last",
@@ -30,7 +30,9 @@
     "@typescript-eslint/parser": "^8.25.0",
     "@types/node": "^22.13.10",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1"
   },
   "type": "module"
 }
