test(parser): 수집/배치 예상 액션 검증 테스트 추가
- node:test 기반 collector/batch_main 테스트 추가로 예상 액션을 검증\n- 공고번호 추출 정규식 보정으로 announcement_id 생성 오류 수정\n- precommit 강제 검증 스크립트(check:precommit) 추가

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "tsx src/main.ts",
     "dev:batch": "tsx src/batch_main.ts",
+    "test": "tsx --test tests/**/*.test.ts",
+    "check:precommit": "npm run test && npm run lint && npm run typecheck && npm run build",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/main.js",
     "start:batch": "node dist/batch_main.js",
